--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           los inversores y destacando la oportunidad de participar en varios proyectos empresariales.
         </p>
         <div class="header__btns">
-          <button class="btn btn__secondary">INVERTIR</button>
+          <a href="https://wa.link/vrk6pm" target="_blank"><button class="btn btn__secondary">INVERTIR</button></a>
         </div>
       </div>
       <div class="header__image">
@@ -203,10 +203,10 @@
 
       <div class="footer__col">
         <h4>Contact</h4>
-        <a href="#">
+        <a href="#contact">
           <span><i class="ri-mail-line"></i></span> viverentable@gmail.com
         </a>
-        <a href="#">
+        <a href="https://wa.link/vrk6pm" target="_blank">
           <span><i class="ri-phone-line"></i></span>943 567 455
         </a>
       </div>
