--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
                 class="ri-facebook-circle-fill"></i></a>
           </span>
           <span>
-            <a href="#"><i class="ri-instagram-line"></i></a>
+            <a href="https://www.instagram.com/vive_rentable/" target="_blank"><i class="ri-instagram-line"></i></a>
           </span>
           <span>
-            <a href="#"><i class="ri-twitter-fill"></i></a>
+            <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i class="ri-tiktok-fill"></i></a>
           </span>
         </div>
       </div>
