--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+  <!-- BOSSTRAP -->
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!--  -->
+
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="shortcut icon" href="./assets/logotipo.png" />
   <script src="https://unpkg.com/scrollreveal"></script>
@@ -17,10 +24,10 @@
     <div class="nav__bar">
       <div class="nav__logo"><a href="#">Vive Rentable</a></div>
       <ul class="nav__links">
-        <li class="link"><a href="#home">INICIO</a></li>
-        <li class="link"><a href="#about">SOBRE NOSOTROS</a></li>
-        <li class="link"><a href="#project">PROYECTOS</a></li>
-        <li class="link"><a href="#contact">CONTACTO</a></li>
+        <li class="link"><a href="#home">Inicio</a></li>
+        <li class="link"><a href="#about">Sobre nosotros</a></li>
+        <li class="link"><a href="#project">Proyectos</a></li>
+        <li class="link"><a href="#contact">Contacto</a></li>
       </ul>
     </div>
   </nav>
@@ -34,7 +41,7 @@
           los inversores y destacando la oportunidad de participar en varios proyectos empresariales.
         </p>
         <div class="header__btns">
-          <a href="https://wa.link/vrk6pm" target="_blank"><button class="btn btn__secondary">INVERTIR</button></a>
+          <a href="https://wa.link/vrk6pm" target="_blank"><button class="btn btn__secondary">Invertir</button></a>
         </div>
       </div>
       <div class="header__image">
@@ -45,14 +52,14 @@
 
   <section class="section__container about__container" id="about">
     <div class="about__image">
-      <img src="assets/invirtiendo.jpg" alt="about" />
+      <img src="assets/inversiones.webp" alt="about" />
     </div>
     <div class="about__content">
-      <h3>SOBRE NOSOTROS</h3>
-      <h2 class="section__header">
+      <h2>SOBRE NOSOTROS</h2>
+      <h3 class="section__header">
         Abandona las
         inversiones pasivas
-      </h2>
+      </h3>
       <p class="section__subheader">
         La plataforma invita a los
         inversores a ser agentes de cambio en
@@ -66,88 +73,67 @@
       <div class="about__grid">
         <div class="about__card">
           <h4>Proyectos Invertidos</h4>
-          <p>34+</p>
+          <p>10+</p>
         </div>
         <div class="about__card">
           <h4>Años de experiencia</h4>
-          <p>20+</p>
+          <p>10+</p>
         </div>
         <div class="about__card">
           <h4>Clientes satisfechos</h4>
-          <p>12</p>
+          <p>40+</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="about__content" id="project">
-    <h2 class="about__content">
-      PROYECTOS DE INVERSION
-    </h2>
-    <div class="project__container">
-      <figure>
-        <img src="./assets/maduracion_banano.png" alt="">
-        <figcaption>
-          <h3>CAMARA DE MADURACION DE BANANO</h3>
-          <p>Bajo este escenario de
-            inversión de 4 socios, el
-            porcentaje de
-            participación del 25% les
-            da un margen de utilidad
-            mensual de S/12,100</p>
+<section class="section_proy">
+  <div class="container text-center">
+    <h2>PROYECTOS</h2><br>
+    <div class="row">
+      <div class="card col" style="width: 18rem;">
+        <img src="./assets/001_slider_banano.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
+          <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25% les
+            da un margen de utilidad mensual de S/12,100</p>
+          <a href="#" class="btn btn__secondary">Saber más</a>
+        </div>
+      </div>
+      <div class="card col" style="width: 18rem;">
+        <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">PROYECTO CHANCAY</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn__secondary">Saber más</a>
+        </div>
+      </div>
+      <div class="card col" style="width: 18rem;">
+        <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn__secondary">Saber más</a>
+        </div>
+      </div>
 
-        </figcaption>
-        <a style="color: aliceblue;"
-            href="https://drive.google.com/file/d/1Y-5S2tANjMu36qm325JmCjgU-_Jv7B1P/view?usp=sharing"
-            target="_blank"><button class="btn btn__secondary">Saber más </button></a>
-      </figure>
-
-
-
-      <figure>
-        <img src="./assets/maduracion_banano.png" alt="">
-        <figcaption>
-          <h3>CAMARA DE MADURACION DE BANANO</h3>
-          <p>Bajo este escenario de
-            inversión de 4 socios, el
-            porcentaje de
-            participación del 25% les
-            da un margen de utilidad
-            mensual de S/12,100</p>
-        </figcaption>
-        <a style="color: aliceblue;"
-            href="https://drive.google.com/file/d/1Y-5S2tANjMu36qm325JmCjgU-_Jv7B1P/view?usp=sharing"
-            target="_blank"><button class="btn btn__secondary">Saber más </button></a>
-      </figure>
-
-
-
-      <figure>
-        <img src="./assets/maduracion_banano.png" alt="">
-        <figcaption>
-          <h3>CAMARA DE MADURACION DE BANANO</h3>
-          <p>Bajo este escenario de
-            inversión de 4 socios, el
-            porcentaje de
-            participación del 25% les
-            da un margen de utilidad
-            mensual de S/12,100</p>
-
-        </figcaption>
-        <a style="color: aliceblue;"
-            href="https://drive.google.com/file/d/1Y-5S2tANjMu36qm325JmCjgU-_Jv7B1P/view?usp=sharing"
-            target="_blank"><button class="btn btn__secondary">Saber más </button></a>
-      </figure>
     </div>
 
-  </section>
+  </div>
+</section>
+  
+
+
+  <!--  -->
 
   <section class="section__container contact__container" id="contact">
     <div class="contact__image">
       <img src="assets/logotipo.png" alt="contact" />
     </div>
     <div class="contact__content">
-      <h2 class="section__header">Contacto</h2>
+      <h2 class="section__header">CONTACTO</h2>
       <p class="section__subheader">
         Si tienes alguna duda o consulta, no dudes en contactarnos.
       </p>
@@ -202,7 +188,7 @@
       </div>
 
       <div class="footer__col">
-        <h4>Contact</h4>
+        <h4>Contacto</h4>
         <a href="#contact">
           <span><i class="ri-mail-line"></i></span> viverentable@gmail.com
         </a>
@@ -225,6 +211,9 @@
   <script src="./js/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <script src="./js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
