--- a/index.html
+++ b/index.html
@@ -87,42 +87,47 @@
     </div>
   </section>
 
-<section class="section_proy">
-  <div class="container text-center">
-    <h2>PROYECTOS</h2><br>
-    <div class="row">
-      <div class="card col" style="width: 18rem;">
-        <img src="./assets/001_slider_banano.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
-          <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25% les
-            da un margen de utilidad mensual de S/12,100</p>
-          <a href="#" class="btn btn__secondary">Saber más</a>
+  <section class="section_proy">
+    <div class="container text-center">
+      <h2>PROYECTOS</h2><br>
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="./assets/001_slider_banano.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
+              <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
+                les da un margen de utilidad mensual de S/12,100</p>
+              <a href="#" class="btn btn__secondary">Saber más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PROYECTO CHANCAY</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn__secondary">Saber más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn__secondary">Saber más</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card col" style="width: 18rem;">
-        <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">PROYECTO CHANCAY</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn__secondary">Saber más</a>
-        </div>
-      </div>
-      <div class="card col" style="width: 18rem;">
-        <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn__secondary">Saber más</a>
-        </div>
-      </div>
-
     </div>
-
-  </div>
-</section>
+  </section>
+  
   
 
 
