--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="nav__logo"><a href="#">Vive Rentable</a></div>
       <ul class="nav__links">
         <li class="link"><a href="#home">Inicio</a></li>
-        <li class="link"><a href="#about">Sobre nosotros</a></li>
         <li class="link"><a href="#project">Proyectos</a></li>
+        <li class="link"><a href="#about">Sobre nosotros</a></li>
         <li class="link"><a href="#contact">Contacto</a></li>
       </ul>
     </div>
@@ -49,7 +49,62 @@
       </div>
     </div>
   </header>
+  <!-- CRONOMETRO WEBINAR -->
+  <section class="contador">
+    <div class="container">
+      <h2>PROXIMO WEBINAR</h2>
+      <h3>Mega proyecto de <span>Chancay</span> </h3>
 
+      <div id="cuenta"></div>
+    </div>
+
+  </section>
+
+
+    <!-- CARDS -->
+    <section class="section_proy">
+      <div class="container text-center">
+        <h2>PROYECTOS</h2><br>
+        <div class="row">
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./assets/001_slider_banano.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
+                <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
+                  les da un margen de utilidad mensual de S/12,100</p>
+                <a href="#" class="btn btn__secondary">Saber más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">PROYECTO CHANCAY</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <a href="#" class="btn btn__secondary">Saber más</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <a href="#" class="btn btn__secondary">Saber más</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+  <!-- ABOUT -->
   <section class="section__container about__container" id="about">
     <div class="about__image">
       <img src="assets/inversiones.webp" alt="about" />
@@ -87,51 +142,8 @@
     </div>
   </section>
 
-  <section class="section_proy">
-    <div class="container text-center">
-      <h2>PROYECTOS</h2><br>
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="./assets/001_slider_banano.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
-              <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
-                les da un margen de utilidad mensual de S/12,100</p>
-              <a href="#" class="btn btn__secondary">Saber más</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">PROYECTO CHANCAY</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn__secondary">Saber más</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn__secondary">Saber más</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  
-  
 
-
-  <!--  -->
+  <!-- CONTACTO -->
 
   <section class="section__container contact__container" id="contact">
     <div class="contact__image">
@@ -157,6 +169,7 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="section__container footer__container">
       <div class="footer__col">
@@ -219,6 +232,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
+  <script src="./js/simplyCountdown.min.js"></script>
+  <script src="./js/countdown.js"></script>
 </body>
 
 </html>
