LPS_change font and color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!--  -->
 
   <link rel="stylesheet" href="./css/styles.css" />
-  <link rel="shortcut icon" href="./assets/logotipo.png" />
+  <link rel="shortcut icon" href="./assets/logo2.jpg" />
   <script src="https://unpkg.com/scrollreveal"></script>
   <title>Vive Rentable</title>
 </head>
@@ -52,56 +52,58 @@
   <!-- CRONOMETRO WEBINAR -->
   <section class="contador">
     <div class="container">
-      <h2>PROXIMO WEBINAR</h2>
-      <h3>Mega proyecto de <span>Chancay</span> </h3>
+      <h2>PROXIMO WEBINAR GRATUITO</h2>
+      <h3><span>Mega proyecto de Chancay</span> </h3> <br>
 
       <div id="cuenta"></div>
-    </div>
+      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdIXsrNqhTJ48ZorCco0qcua06NuRW8eUBlLk9oMQYoQwD4MQ/viewform"><button
+          class="btn btn__secondary">Quiero participar</button></a>
 
+    </div>
   </section>
 
 
-    <!-- CARDS -->
-    <section class="section_proy">
-      <div class="container text-center">
-        <h2>PROYECTOS</h2><br>
-        <div class="row">
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="./assets/001_slider_banano.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
-                <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
-                  les da un margen de utilidad mensual de S/12,100</p>
-                <a href="#" class="btn btn__secondary">Saber más</a>
-              </div>
+  <!-- CARDS -->
+  <section class="section_proy" id="project">
+    <div class="container text-center">
+      <h2>PROYECTOS</h2><br>
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="./assets/001_slider_banano.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
+              <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
+                les da un margen de utilidad mensual de S/12,100</p>
+              <a href="#" class="btn btn__secondary">Saber más</a>
             </div>
           </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">PROYECTO CHANCAY</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                  content.</p>
-                <a href="#" class="btn btn__secondary">Saber más</a>
-              </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PROYECTO CHANCAY</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn__secondary">Saber más</a>
             </div>
           </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                  content.</p>
-                <a href="#" class="btn btn__secondary">Saber más</a>
-              </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn__secondary">Saber más</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
 
   <!-- ABOUT -->
