add data proyect

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <h3><span>Mega proyecto de Chancay</span> </h3> <br>
 
       <div id="cuenta"></div>
-      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdIXsrNqhTJ48ZorCco0qcua06NuRW8eUBlLk9oMQYoQwD4MQ/viewform"><button
+      <a target="_blank"
+        href="https://docs.google.com/forms/d/e/1FAIpQLSdIXsrNqhTJ48ZorCco0qcua06NuRW8eUBlLk9oMQYoQwD4MQ/viewform"><button
           class="btn btn__secondary">Quiero participar</button></a>
 
     </div>
@@ -75,7 +76,9 @@
               <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
               <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
                 les da un margen de utilidad mensual de S/12,100</p>
-              <a href="#" class="btn btn__secondary">Saber más</a>
+              <a target="_blank"
+                href="https://drive.google.com/file/d/14cuMH9FsSs1OG41T6iT4PJjKJ9RcUbvR/view?usp=sharing"
+                class="btn btn__secondary">Saber más</a>
             </div>
           </div>
         </div>
@@ -83,9 +86,10 @@
           <div class="card">
             <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">PROYECTO CHANCAY</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <h5 class="card-title">LOTES EN CHANCAY</h5>
+              <p class="card-text">Este avance posiciona a Chancay como una zona de alto potencial para
+                inversiones inmobiliarias, con expectativas de crecimiento económico y aumento en el valor de las
+                propiedades.</p>
               <a href="#" class="btn btn__secondary">Saber más</a>
             </div>
           </div>
@@ -94,9 +98,9 @@
           <div class="card">
             <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <h5 class="card-title">PROXIMO PROYECTO</h5>
+              <p class="card-text">Suscríbete para descubrir futuros proyectos con alta rentabilidad y gran proyección a
+                futuro.</p>
               <a href="#" class="btn btn__secondary">Saber más</a>
             </div>
           </div>
