add page maduracion-banano

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="./assets/logo2.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
@@ -14,7 +15,6 @@
   <!--  -->
 
   <link rel="stylesheet" href="./css/styles.css" />
-  <link rel="shortcut icon" href="./assets/logo2.jpg" />
   <script src="https://unpkg.com/scrollreveal"></script>
   <title>Vive Rentable</title>
 </head>
@@ -77,7 +77,7 @@
               <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
                 les da un margen de utilidad mensual de S/12,100</p>
               <a target="_blank"
-                href="https://drive.google.com/file/d/14cuMH9FsSs1OG41T6iT4PJjKJ9RcUbvR/view?usp=sharing"
+                href="./maduracion-de-banano.html"
                 class="btn btn__secondary">Saber más</a>
             </div>
           </div>
