update proy - camara de maduracion

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="./assets/logo2.jpg" />
+  <link rel="shortcut icon" href="./assets/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-md-4 mb-4">
           <div class="card">
-            <img src="./assets/001_slider_banano.png" class="card-img-top" alt="...">
+            <img src="./assets/cmb-001.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
               <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
@@ -84,7 +84,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card">
-            <img src="./assets/Chancay.jpeg" class="card-img-top" alt="...">
+            <img src="./assets/mgapuerto.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">LOTES EN CHANCAY</h5>
               <p class="card-text">Este avance posiciona a Chancay como una zona de alto potencial para
@@ -113,7 +113,7 @@
   <!-- ABOUT -->
   <section class="section__container about__container" id="about">
     <div class="about__image">
-      <img src="assets/inversiones.webp" alt="about" />
+      <img src="assets/prox_proyect.webp" alt="about" />
     </div>
     <div class="about__content">
       <h2>SOBRE NOSOTROS</h2>
