--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="./assets/logo.svg" />
+  <link rel="icon" href="./assets/logo.svg" type="image/x-icon">
+<link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
