LPS agg metricol

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="./assets/logo.svg" type="image/x-icon">
-<link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
@@ -78,9 +78,7 @@
               <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
               <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
                 les da un margen de utilidad mensual de S/12,100</p>
-              <a target="_blank"
-                href="./maduracion-de-banano.html"
-                class="btn btn__secondary">Saber más</a>
+              <a target="_blank" href="./maduracion-de-banano.html" class="btn btn__secondary">Saber más</a>
             </div>
           </div>
         </div>
@@ -243,6 +241,7 @@
 
   <script src="./js/simplyCountdown.min.js"></script>
   <script src="./js/countdown.js"></script>
+  <script>function loadScript(a) { var b = document.getElementsByTagName("head")[0], c = document.createElement("script"); c.type = "text/javascript", c.src = "https://tracker.metricool.com/resources/be.js", c.onreadystatechange = a, c.onload = a, b.appendChild(c) } loadScript(function () { beTracker.t({ hash: "167b64a031330cb028b22d0d6f4aa075" }) });</script>
 </body>
 
 </html>
