--- a/index.html
+++ b/index.html
@@ -150,8 +150,76 @@
 
 
   <!-- CONTACTO -->
-
   <section class="section__container contact__container" id="contact">
+    <div class="contact__image">
+      <img src="assets/logotipo.png" alt="contact" />
+    </div>
+    <div id="mc_embed_shell">
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #mc_embed_signup {
+                background: #fff;
+                clear: left;
+                font: 14px Helvetica, Arial, sans-serif;
+                width: 600px;
+            }
+
+            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+             We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+            <form
+                action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                target="_blank">
+                <div id="mc_embed_signup_scroll">
+                    <h2>Suscribir</h2>
+                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                    <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
+                                class="asterisk">*</span></label><input type="email" name="EMAIL"
+                            class="required email" id="mce-EMAIL" required="" value=""><span
+                            id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
+                    <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
+                            name="FNAME" class=" text" id="mce-FNAME" value=""></div>
+                    <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input
+                            type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+                    <div hidden=""><input type="hidden" name="tags" value="5179753"></div>
+                    <div id="mce-responses" class="clear foot">
+                        <div class="response" id="mce-error-response" style="display: none;"></div>
+                        <div class="response" id="mce-success-response" style="display: none;"></div>
+                    </div>
+                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                        /* real people should not fill this in and expect good things - do not remove this or
+                        risk form bot signups */
+                        <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
+                    </div>
+                    <div class="optionalParent">
+                        <div class="clear foot">
+                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                value="Subscribe">
+                            <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
+                                    title="Mailchimp: marketing por correo electrónico fácil y divertido"><span
+                                        style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                            class="refferal_badge"
+                                            src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                            alt="Intuit Mailchimp"
+                                            style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <script type="text/javascript"
+            src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+        <script
+            type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+    </div>
+
+
+</section>
+
+  <!-- <section class="section__container contact__container" id="contact">
     <div class="contact__image">
       <img src="assets/logotipo.png" alt="contact" />
     </div>
@@ -173,7 +241,7 @@
         <button type="submit" id="button" value="Send Email" class="btn btn-primary">Enviar</button>
       </form>
     </div>
-  </section>
+  </section> -->
 
   <!-- FOOTER -->
   <footer class="footer">
@@ -228,12 +296,16 @@
   </footer>
 
 
-
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<!-- FORM EMAIL JS -->
+  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="text/javascript">
     emailjs.init('nyv_u7oTJ36StAu9s')
   </script>
-  <script src="./js/index.js"></script>
+  <script src="./js/index.js"></script> -->
+  <!--  -->
+
+
+  
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <script src="./js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -242,6 +314,8 @@
 
   <script src="./js/simplyCountdown.min.js"></script>
   <script src="./js/countdown.js"></script>
+  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+  <script src="https://mediafiles.botpress.cloud/123c28b4-c9f3-4e4f-a9f9-d7fbd26955a4/webchat/config.js" defer></script>
 
 </body>
 
