--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/logo.svg">
     <title>Webinar EXCLUSIVO</title>
     <link rel="stylesheet" href="./css/webinar_camara_banano.css">
 </head>
@@ -33,27 +34,16 @@
 
         </section>
 
-        <section class="form">
-            <div id="mc_embed_shell">
+        <section class="container">
+            <div id="mc_embed_shell container ">
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-                <style type="text/css">
-                    #mc_embed_signup {
-                        background: #fff;
-                        clear: left;
-                        font: 14px Helvetica, Arial, sans-serif;
-                        width: 600px;
-                    }
-
-                    /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                </style>
                 <div id="mc_embed_signup">
                     <form
                         action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                         target="_blank">
                         <div id="mc_embed_signup_scroll">
-                            <h2>Suscribir</h2>
+                            <h2>Participar</h2>
                             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                             <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                         class="asterisk">*</span></label><input type="email" name="EMAIL"
