--- a/maduracion-de-banano.html
+++ b/maduracion-de-banano.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./assets/logo2.jpg" />
+    <link rel="shortcut icon" href="./assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Maduracion de banano" content="Descubre nuetras maquinas de maduracion de banano">
     <title>Maduración de Banano</title>
