--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -18,7 +18,7 @@
         <section>
             <p>En pleno auge de la <strong>Agricultura peruana</strong>, invertir bien es invertir en las necesidades de
                 un sector que
-                crece de manera acelerada y que aún pocos inversionistas lo hacen. Lo que lo hacen no sólo ven retornar
+                crece de manera acelerada y que aún pocos inversionistas lo hacen. Los que hacen no solo ven retornar
                 su <strong>inversión de manera rápida</strong>, sino que multiplican su capital</p>
                 <img src="./assets/cm-005.png" alt="imagen">
             <p>Muchos invierten en sembrar y pocos invierten en <strong>satisfacer las necesidades</strong> de los que
@@ -44,7 +44,7 @@
                         target="_blank">
                         <div id="mc_embed_signup_scroll">
                             <h2>Participar</h2>
-                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                            <div class="indicates-required"><span class="asterisk">*</span> indica requerido</div>
                             <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                         class="asterisk">*</span></label><input type="email" name="EMAIL"
                                     class="required email" id="mce-EMAIL" required="" value=""><span
@@ -59,14 +59,14 @@
                                 <div class="response" id="mce-success-response" style="display: none;"></div>
                             </div>
                             <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                /* real people should not fill this in and expect good things - do not remove this or
-                                risk form bot signups */
+                                /* las personas reales no deberían completar esto y esperar cosas buenas - no elimines esto o
+                                correrás el riesgo de registros de formularios de bots */
                                 <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
                             </div>
                             <div class="optionalParent">
                                 <div class="clear foot">
                                     <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                        value="Subscribe">
+                                        value="Suscribir">
                                     <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
                                             title="Mailchimp: marketing por correo electrónico fácil y divertido"><span
                                                 style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
@@ -112,7 +112,7 @@
     <footer>
         <p>¡No pierdas la oportunidad de explorar el potencial de inversión en el negocio del banano con VIVE Rentable!
             <br>
-            © 2024 VIVE Rentable | Privacidad | Términos y Condiciones | [Redes Sociales]
+            © 2024 VIVE Rentable
         </p>
 
     </footer>
