add page gracias

--- a/gracias_webinar.html
+++ b/gracias_webinar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/logo.svg" type="image/png">
-    <title>Gracias</title>
+    <title>Gracias por inscribirte al webinar</title>
     <link rel="stylesheet" href="./css/gracias_webinar.css">
 </head>
 
