--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -20,7 +20,7 @@
                 un sector que
                 crece de manera acelerada y que aún pocos inversionistas lo hacen. Los que hacen no solo ven retornar
                 su <strong>inversión de manera rápida</strong>, sino que multiplican su capital</p>
-                <img src="./assets/cm-005.png" alt="imagen">
+            <img src="./assets/cm-005.png" alt="imagen">
             <p>Muchos invierten en sembrar y pocos invierten en <strong>satisfacer las necesidades</strong> de los que
                 siembran y del
                 producto cosechado: ¡Los servicios de conservación y maduración!</p>
@@ -35,40 +35,40 @@
         </section>
 
         <section class="container">
-            <div id="mc_embed_shell container ">
+            <div id="mc_embed_shell">
                 <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+
                 <div id="mc_embed_signup">
                     <form
                         action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                         target="_blank">
                         <div id="mc_embed_signup_scroll">
-                            <h2>Participar</h2>
-                            <div class="indicates-required"><span class="asterisk">*</span> indica requerido</div>
+                            <h2>Suscribir</h2>
+                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                             <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
                                         class="asterisk">*</span></label><input type="email" name="EMAIL"
-                                    class="required email" id="mce-EMAIL" required="" value=""><span
-                                    id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
+                                    class="required email" id="mce-EMAIL" required="" value=""></div>
                             <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
                                     name="FNAME" class=" text" id="mce-FNAME" value=""></div>
                             <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input
                                     type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
-                            <div hidden=""><input type="hidden" name="tags" value="5179753"></div>
+                            <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
                             <div id="mce-responses" class="clear foot">
                                 <div class="response" id="mce-error-response" style="display: none;"></div>
                                 <div class="response" id="mce-success-response" style="display: none;"></div>
                             </div>
                             <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                /* las personas reales no deberían completar esto y esperar cosas buenas - no elimines esto o
-                                correrás el riesgo de registros de formularios de bots */
+                                /* real people should not fill this in and expect good things - do not remove this or
+                                risk form bot signups */
                                 <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
                             </div>
                             <div class="optionalParent">
                                 <div class="clear foot">
                                     <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                        value="Suscribir">
+                                        value="Subscribe">
                                     <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
-                                            title="Mailchimp: marketing por correo electrónico fácil y divertido"><span
+                                            title="Mailchimp - email marketing made easy and fun"><span
                                                 style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
                                                     class="refferal_badge"
                                                     src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
