--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       <h3><span>Mega proyecto de Chancay</span> </h3> <br>
 
       <div id="cuenta"></div>
-      <a target="_blank"
-        href="https://docs.google.com/forms/d/e/1FAIpQLSdIXsrNqhTJ48ZorCco0qcua06NuRW8eUBlLk9oMQYoQwD4MQ/viewform"><button
+      <a 
+        href="#contact"><button
           class="btn btn__secondary">Quiero participar</button></a>
 
     </div>
@@ -150,87 +150,68 @@
 
 
   <!-- CONTACTO -->
+  
   <section class="section__container contact__container" id="contact">
-    <div class="contact__image">
-      <img src="assets/logotipo.png" alt="contact" />
-    </div>
+    <h2 style="text-align: center;">Agenda una reunion gratuita o inscribete</h2>
+  <div class="contact__image">
+    <!-- Principio del widget integrado de Calendly -->
+    <div class="calendly-inline-widget"
+      data-url="https://calendly.com/vive-rentable/reunion-de-inversion?primary_color=00606d"
+      style="min-width:320px;height:700px;"></div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+    <!-- Final del widget integrado de Calendly -->
+  </div>
     <div id="mc_embed_shell">
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-        <div id="mc_embed_signup">
-            <form
-                action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                target="_blank">
-                <div id="mc_embed_signup_scroll">
-                    <h2>Suscribir</h2>
-                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                    <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
-                                class="asterisk">*</span></label><input type="email" name="EMAIL"
-                            class="required email" id="mce-EMAIL" required="" value=""><span
-                            id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
-                    <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
-                            name="FNAME" class=" text" id="mce-FNAME" value=""></div>
-                    <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input
-                            type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
-                    <div hidden=""><input type="hidden" name="tags" value="5179753"></div>
-                    <div id="mce-responses" class="clear foot">
-                        <div class="response" id="mce-error-response" style="display: none;"></div>
-                        <div class="response" id="mce-success-response" style="display: none;"></div>
-                    </div>
-                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                        /* real people should not fill this in and expect good things - do not remove this or
-                        risk form bot signups */
-                        <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
-                    </div>
-                    <div class="optionalParent">
-                        <div class="clear foot">
-                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                value="Subscribe">
-                            <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
-                                    title="Mailchimp: marketing por correo electrónico fácil y divertido"><span
-                                        style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
-                                            class="refferal_badge"
-                                            src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                                            alt="Intuit Mailchimp"
-                                            style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <script type="text/javascript"
-            src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-        <script
-            type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+      <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+      <div id="mc_embed_signup">
+        <form
+          action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
+          method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+          target="_blank">
+          <div id="mc_embed_signup_scroll">
+            <h2>Suscríbete</h2>
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
+                  class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
+                id="mce-EMAIL" required="" value=""><span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
+            <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text" name="FNAME"
+                class=" text" id="mce-FNAME" value=""></div>
+            <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input type="text"
+                name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+            <div hidden=""><input type="hidden" name="tags" value="5179753"></div>
+            <div id="mce-responses" class="clear foot">
+              <div class="response" id="mce-error-response" style="display: none;"></div>
+              <div class="response" id="mce-success-response" style="display: none;"></div>
+            </div>
+            <div aria-hidden="true" style="position: absolute; left: -5000px;">
+              /* real people should not fill this in and expect good things - do not remove this or
+              risk form bot signups */
+              <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
+            </div>
+            <div class="optionalParent">
+              <div class="clear foot">
+                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
+                    title="Mailchimp: marketing por correo electrónico fácil y divertido"><span
+                      style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                        class="refferal_badge"
+                        src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                        alt="Intuit Mailchimp"
+                        style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+      <script
+        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
     </div>
 
 
-</section>
+  </section>
 
-  <!-- <section class="section__container contact__container" id="contact">
-    <div class="contact__image">
-      <img src="assets/logotipo.png" alt="contact" />
-    </div>
-    <div class="contact__content">
-      <h2 class="section__header">CONTACTO</h2>
-      <p class="section__subheader">
-        Si tienes alguna duda o consulta, no dudes en contactarnos.
-      </p>
-      <form id="form">
-        <div class="form__group">
-          <input type="text" class="form-control" name="from_name" id="from_name" required placeholder="Nombre" />
-          <input type="text" class="form-control" name="to_name" id="to_name" placeholder="Apellido" required />
-        </div>
-        <div class="form__group">
-          <input type="email" class="form-control" name="email_id" id="email_id" placeholder="Correo" required />
-          <input type="number" class="form-control" name="reply_to" id="reply_to" placeholder="Número" required />
-        </div>
-        <textarea cols="30" rows="5" placeholder="Description"></textarea>
-        <button type="submit" id="button" value="Send Email" class="btn btn-primary">Enviar</button>
-      </form>
-    </div>
-  </section> -->
 
   <!-- FOOTER -->
   <footer class="footer">
@@ -271,10 +252,10 @@
       <div class="footer__col">
         <h4>Contacto</h4>
         <a href="#contact">
-          <span><i class="ri-mail-line"></i></span> viverentable@gmail.com
+          <span><i class="ri-mail-line"></i></span> info@vive-rentable.com
         </a>
-        <a href="https://wa.link/vrk6pm" target="_blank">
-          <span><i class="ri-phone-line"></i></span>943 567 455
+        <a href="https://wa.link/garf4f" target="_blank">
+          <span><i class="ri-phone-line"></i></span>947548260
         </a>
       </div>
     </div>
@@ -285,16 +266,7 @@
   </footer>
 
 
-<!-- FORM EMAIL JS -->
-  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script type="text/javascript">
-    emailjs.init('nyv_u7oTJ36StAu9s')
-  </script>
-  <script src="./js/index.js"></script> -->
-  <!--  -->
 
-
-  
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <script src="./js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
