--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <!-- CONTACTO -->
   
   <section class="section__container contact__container" id="contact">
-    <h2 style="text-align: center;">Agenda una reunion gratuita o inscribete</h2>
+    <h2 style="text-align: center;">Agenda una reunión gratuita o inscríbete</h2>
   <div class="contact__image">
     <!-- Principio del widget integrado de Calendly -->
     <div class="calendly-inline-widget"
