--- a/index.html
+++ b/index.html
@@ -54,13 +54,11 @@
   <!-- CRONOMETRO WEBINAR -->
   <section class="contador">
     <div class="container">
-      <h2>PROXIMO WEBINAR GRATUITO</h2>
-      <h3><span>Mega proyecto de Chancay</span> </h3> <br>
+      <h2>Próximo webinar gratuito</h2>
+      <h3><span>Lotes en Chancay</span> </h3> <br>
 
       <div id="cuenta"></div>
-      <a 
-        href="#contact"><button
-          class="btn btn__secondary">Quiero participar</button></a>
+      <a href="#contact"><button class="btn btn__secondary">Quiero participar</button></a>
 
     </div>
   </section>
@@ -75,9 +73,9 @@
           <div class="card">
             <img src="./assets/cmb-001.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h5>
-              <p class="card-text">Bajo este escenario de inversión de 4 socios, el porcentaje de participación del 25%
-                les da un margen de utilidad mensual de S/12,100</p>
+              <h4 class="card-title">CÁMARA DE MADURACIÓN DE BANANO</h4>
+              <p class="card-text">Bajo este escenario de <br> inversión de 4 socios, el porcentaje de participación del 25%
+                les da un margen de utilidad mensual  <br>de S/12,100</p>
               <a target="_blank" href="./maduracion-de-banano.html" class="btn btn__secondary">Saber más</a>
             </div>
           </div>
@@ -86,7 +84,7 @@
           <div class="card">
             <img src="./assets/mgapuerto.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">LOTES EN CHANCAY</h5>
+              <h4 class="card-title">LOTES EN <br>CHANCAY</h4>
               <p class="card-text">Este avance posiciona a Chancay como una zona de alto potencial para
                 inversiones inmobiliarias, con expectativas de crecimiento económico y aumento en el valor de las
                 propiedades.</p>
@@ -98,7 +96,7 @@
           <div class="card">
             <img src="./assets/inversiones.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">PROXIMO PROYECTO</h5>
+              <h4 class="card-title">PROXIMO PROYECTO</h4>
               <p class="card-text">Suscríbete para descubrir futuros proyectos con alta rentabilidad y gran proyección a
                 futuro.</p>
               <a href="#" class="btn btn__secondary">Saber más</a>
@@ -150,17 +148,17 @@
 
 
   <!-- CONTACTO -->
-  
+
   <section class="section__container contact__container" id="contact">
     <h2 style="text-align: center;">Agenda una reunión gratuita o inscríbete</h2>
-  <div class="contact__image">
-    <!-- Principio del widget integrado de Calendly -->
-    <div class="calendly-inline-widget"
-      data-url="https://calendly.com/vive-rentable/reunion-de-inversion?primary_color=00606d"
-      style="min-width:320px;height:700px;"></div>
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-    <!-- Final del widget integrado de Calendly -->
-  </div>
+    <div class="contact__image">
+      <!-- Principio del widget integrado de Calendly -->
+      <div class="calendly-inline-widget"
+        data-url="https://calendly.com/vive-rentable/reunion-de-inversion?primary_color=00606d"
+        style="min-width:320px;height:700px;"></div>
+      <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+      <!-- Final del widget integrado de Calendly -->
+    </div>
     <div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
       <div id="mc_embed_signup">
