LPS update gracias

--- a/gracias.html
+++ b/gracias.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gracias</title>
+    <title>Gracias por suscribirte</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+
+        p {
+            color: #666;
+            line-height: 1.6;
+            text-align: center;
+        }
+
+        .button {
+            display: block;
+            width: 200px;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Gracias</h1>
-    <a href="./index.html"><button>Regresar</button></a>
-    
+    <div class="container">
+        <h1>¡Gracias por suscribirte!</h1>
+        <p>Estamos emocionados de tenerte a bordo. Ahora estarás al tanto de todas nuestras actualizaciones y noticias.</p>
+        <a href="./index.html" class="button">Volver al inicio</a>
+    </div>
 </body>
+
 </html>
