--- a/index.html
+++ b/index.html
@@ -270,12 +270,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
   <script src="./js/simplyCountdown.min.js"></script>
   <script src="./js/countdown.js"></script>
-  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-  <script src="https://mediafiles.botpress.cloud/123c28b4-c9f3-4e4f-a9f9-d7fbd26955a4/webchat/config.js" defer></script>
 
+<!-- BOTPRESS -->
 </body>
 
 </html>
