LPS update link wsp

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           los inversores y destacando la oportunidad de participar en varios proyectos empresariales.
         </p>
         <div class="header__btns">
-          <a href="https://wa.link/vrk6pm" target="_blank"><button class="btn btn__secondary">Invertir</button></a>
+          <a href="https://wa.link/garf4f" target="_blank"><button class="btn btn__secondary">Invertir</button></a>
         </div>
       </div>
       <div class="header__image">
@@ -150,7 +150,9 @@
   <!-- CONTACTO -->
 
   <section class="section__container contact__container" id="contact">
+
     <h2 style="text-align: center;">Agenda una reunión gratuita o inscríbete</h2>
+
     <div class="contact__image">
       <!-- Principio del widget integrado de Calendly -->
       <div class="calendly-inline-widget"
@@ -159,6 +161,7 @@
       <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
       <!-- Final del widget integrado de Calendly -->
     </div>
+
     <div id="mc_embed_shell">
       <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
       <div id="mc_embed_signup">
@@ -182,8 +185,6 @@
               <div class="response" id="mce-success-response" style="display: none;"></div>
             </div>
             <div aria-hidden="true" style="position: absolute; left: -5000px;">
-              /* real people should not fill this in and expect good things - do not remove this or
-              risk form bot signups */
               <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value="">
             </div>
             <div class="optionalParent">
@@ -204,14 +205,14 @@
       </div>
       <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
       <script
-        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);
+        </script>
     </div>
-
-
   </section>
 
 
   <!-- FOOTER -->
+
   <footer class="footer">
     <div class="section__container footer__container">
       <div class="footer__col">
@@ -273,7 +274,6 @@
   <script src="./js/simplyCountdown.min.js"></script>
   <script src="./js/countdown.js"></script>
 
-<!-- BOTPRESS -->
 </body>
 
 </html>
