--- a/maduracion-de-banano.html
+++ b/maduracion-de-banano.html
@@ -17,7 +17,7 @@
             <h1>Descubre la <br>Oportunidad de Oro en<br>el Negocio de <br>Maduración de Banano</h1><br>
             <p>Una Inversión Única en un Mercado de Alta Demanda</p> <br>
             <a target="_blank"
-                href="https://drive.google.com/file/d/14cuMH9FsSs1OG41T6iT4PJjKJ9RcUbvR/view?usp=sharing"><button>Empieza
+                href="https://wa.link/garf4f"><button>Empieza
                     ahora</button></a>
 
         </div>
@@ -120,11 +120,11 @@
 
             <div class="footer__col">
                 <h4>Contacto</h4>
-                <a href="#contact">
+                <a href="">
                     <span><i class="ri-mail-line"></i></span> viverentable@gmail.com
                 </a>
-                <a href="https://wa.link/vrk6pm" target="_blank">
-                    <span><i class="ri-phone-line"></i></span>943 567 455
+                <a href="https://wa.link/garf4f" target="_blank">
+                    <span><i class="ri-phone-line"></i></span>947548260
                 </a>
             </div>
         </div>
